# libarc

./: .gitignore  CMakeLists.txt  README.md  build.md  vcpkg.json
arc-host/: CMakeLists.txt  README.md  app.entitlements  main.cpp
host/: CMakeLists.txt  README.md
host/include/host/: host.hpp
host/src/: apple_store_manager.cpp  apple_store_manager.hpp  billing_manager.cpp  billing_manager.hpp  dispatcher.cpp  dispatcher.hpp  host.cpp  main_thread.cpp  main_thread.hpp  microsoft_store_manager.cpp  microsoft_store_manager.hpp  native_handle_cast.hpp  registry.cpp  registry.hpp
integrations/billing/: CMakeLists.txt
integrations/billing/include/billing/apple/: store.h
integrations/billing/include/billing/microsoft/: store.h
integrations/billing/include/billing/windows/: store.h
integrations/billing/src/apple-store/: ShimStore.mm
integrations/billing/src/apple-store/swift/: Converters.swift  EntitlementManager.swift  Models.swift  ProductFetcher.swift  PurchaseHandler.swift  PurchaseIntentListener.swift  RefundHandler.swift  StoreBridge.swift
integrations/billing/src/microsoft-store/: Store.cpp
ipc/: CMakeLists.txt  README.md
ipc/include/ipc/: ipc.hpp
ipc/src/: channel.cpp  channel.hpp  client.cpp  framing.hpp  server.cpp  transport.hpp  transport_inprocess.cpp  transport_inprocess.hpp  transport_unix.cpp  transport_unix.hpp  transport_win.cpp  transport_win.hpp
samples/app/: CMakeLists.txt  README.md  main_ipc.cpp
scripts/: main.go
ui/: CMakeLists.txt  README.md
ui/docs/: reference.md
ui/include/ui/: PixelView.h  View.h  Window.h  pixel_channel.h  types.h  ui.h
ui/src/linux/: PixelView.cpp  View.cpp  Window.cpp
ui/src/macos/: PixelView.mm  View.mm  Window.mm
ui/src/windows/: PixelView.cpp  View.cpp  Window.cpp
webview/: CMakeLists.txt  README.md
webview/docs/: reference.md  webview_ipc.md
webview/include/webview/: auth.hpp  cookie.hpp  dialog.hpp  download.hpp  events.hpp  find.hpp  ipc.hpp  native_handle.hpp  permission.hpp  platform.hpp  request.hpp  script.hpp  webview.hpp
webview/src/webkit/: WebViewImpl.cpp  WebViewImpl.hpp  cookies.cpp  dialog.cpp  events.cpp  ipc.cpp  media.cpp  navigation.cpp  request.cpp  script.cpp  ui.cpp
webview/src/webview2/: WebViewImpl.cpp  WebViewImpl.hpp  cookies.cpp  dialog.cpp  events.cpp  ipc.cpp  media.cpp  navigation.cpp  request.cpp  script.cpp  string_util.hpp  ui.cpp
webview/src/wkwebview/: WebViewDelegate.h  WebViewImpl.hpp  WebViewImpl.mm  cookies.mm  dialog.mm  events.mm  ipc.mm  media.mm  navigation.mm  request.mm  script.mm  ui.mm
